--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <h3>BUBUGIF.GITHUB.IO</h3>
 <ol>
   <li><a href="https://bubugif.github.io/ungkapan-hati.html" target="_blank">Ungkapan Hati</a></li>
+  <li><a href="https://bubugif.github.io/cinta-yang-menyakitkan.html" target="_blank">Cinta yang Menyakitkan</a></li>
 </ol>
 </body>
 </html>
