--- a/ungkapan-hati.html
+++ b/ungkapan-hati.html
@@ -4,6 +4,18 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover">
 <title>Ungkapan Hati</title>
+<!-- Meta penting -->
+<meta name="description" content="By: bubugif.github.io">
+<meta name="keywords" content="html,css,js,bubugif">
+<meta name="author" content="Bubugif">
+<!-- Favicon -->
+<link rel="icon" href="https://bubugif.github.io/bubugif.png" type="image/x-icon">
+<!-- Open Graph (biar bagus kalau dishare ke sosmed) -->
+<meta property="og:title" content="Ungkapan Hati">
+<meta property="og:description" content="By: bubugif.github.io">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://bubugif.github.io/ungkapan-hati.html">
+<meta property="og:image" content="https://bubugif.github.io/bubugif.png">
 <style>
 :root {
   --bg1: #111;
