--- a/cinta-yang-menyakitkan.html
+++ b/cinta-yang-menyakitkan.html
@@ -3,7 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover">
-<title>Cinta yang Menyakitkan</title>
+<title>Cinta Yang Menyakitkan</title>
+<!-- Meta penting -->
+<meta name="description" content="By: bubugif.github.io">
+<meta name="keywords" content="html,css,js,bubugif">
+<meta name="author" content="Bubugif">
+<!-- Favicon -->
+<link rel="icon" href="https://bubugif.github.io/bubugif.png" type="image/x-icon">
+<!-- Open Graph (biar bagus kalau dishare ke sosmed) -->
+<meta property="og:title" content="Cinta Yang Menyakitkan">
+<meta property="og:description" content="By: bubugif.github.io">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://bubugif.github.io/cinta-yang-menyakitkan.html">
+<meta property="og:image" content="https://bubugif.github.io/bubugif.png">
 <style>
 :root {
   --bg1: #0d0d0d;
