--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://bubugif.github.io">
 <meta property="og:image" content="https://bubugif.github.io/bubugif.png">
+<meta property="og:image:width" content="1024">
+<meta property="og:image:height" content="1024">
 <style>
   body {
     margin: 0;
