--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <meta property="og:image" content="https://bubugif.github.io/bubugif.png">
 <meta property="og:image:width" content="1024">
 <meta property="og:image:height" content="1024">
+<meta name="google-site-verification" content="AgLiikTCS_uhIKXpXZ2Gy0xYpgTDUSPMx6ZDX8c75dw" />
 <style>
   body {
     margin: 0;
