--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
 <body>
   <h3>BUBUGIF.GITHUB.IO</h3>
   <ol>
-    <li><a href="https://bubugif.github.io/ungkapan-hati.html" target="_blank">Ungkapan Hati</a></li>
+    <li><a href="https://bubugif.github.io/surat-nembak-online.html" target="_blank">Surat Nembak Online</a></li>
     <li><a href="https://bubugif.github.io/cinta-yang-menyakitkan.html" target="_blank">Cinta yang Menyakitkan</a></li>
+    <li><a href="https://bubugif.github.io/ungkapan-hati.html" target="_blank">Ungkapan Hati</a></li>
   </ol>
   
   <footer>
